[cc] Only block for deferred draw in full-pipe mode

Bug: 773058
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I33e0f97d6e9246b0e5e9ef71e9a462ca191a1f91
Reviewed-on: https://chromium-review.googlesource.com/708735
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Reviewed-by: Sunny Sachanandani <sunnyps@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508315}
Former-commit-id: f690274ae4a0a09cd28b26900ef46c47044a3809